Fix bug in "sample screen color" action when it was initiated multiple times without completing

BUG:485739